--- a/package.json
+++ b/package.json
@@ -25,17 +25,19 @@
     "test": "eslint src/ && jest",
     "coverage": "jest --coverage"
   },
-  "homepage": "https://github.com/CyComponent/CyNetworkViewerComponent",
+  "homepage": "https://github.com/CyComponent/CyViewer",
   "repository": {
     "type": "git",
-    "url": "https://github.com/CyComponent/CyNetworkViewerComponent.git"
+    "url": "https://github.com/CyComponent/CyViewer.git"
   },
   "bugs": {
-    "url": "https://github.com/CyComponent/CyNetworkViewerComponent/issues"
+    "url": "https://github.com/CyComponent/CyViewer/issues"
   },
   "dependencies": {
     "d3-hierarchy": "^1.0.2",
-    "d3-selection": "^1.0.2"
+    "d3-selection": "^1.0.2",
+    "d3-transition": "^1.0.3",
+    "react-smooth": "^0.1.14"
   },
   "peerDependencies": {},
   "devDependencies": {
