--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   },
   "dependencies": {
     "d3-hierarchy": "^1.0.2",
+    "d3-scale": "^1.0.4",
     "d3-selection": "^1.0.2",
     "d3-transition": "^1.0.3",
+    "d3-zoom": "^1.1.1",
     "react-smooth": "^0.1.14"
   },
   "peerDependencies": {},
