--- a/example/package.json
+++ b/example/package.json
@@ -9,10 +9,10 @@
     "clean": "rm build/app.js"
   },
   "dependencies": {
-    "tree-viewer": "^1.0.0",
     "immutable": "^3.8.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "tree-viewer": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.21",
@@ -23,8 +23,6 @@
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
     "node-sass": "^3.4.2",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.0.0",
     "redux-devtools-dock-monitor": "^1.0.1",
