--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "url": "https://github.com/CyComponent/CyViewer/issues"
   },
   "dependencies": {
+    "d3-drag": "^1.0.2",
     "d3-hierarchy": "^1.0.2",
     "d3-scale": "^1.0.4",
     "d3-selection": "^1.0.2",
     "d3-transition": "^1.0.3",
     "d3-zoom": "^1.1.1",
+    "dagre": "^0.7.4",
     "react-smooth": "^0.1.14"
   },
   "peerDependencies": {},
