--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "url": "https://github.com/CyComponent/CyViewer/issues"
   },
   "dependencies": {
+    "d3-color": "^1.0.2",
     "d3-drag": "^1.0.2",
     "d3-hierarchy": "^1.0.2",
     "d3-scale": "^1.0.4",
