--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "d3-color": "^1.0.2",
     "d3-drag": "^1.0.2",
     "d3-hierarchy": "^1.0.2",
+    "d3-interpolate": "^1.1.3",
     "d3-scale": "^1.0.4",
     "d3-selection": "^1.0.2",
     "d3-transition": "^1.0.3",
