--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tree-viewer",
   "author": "Keiichiro Ono <kono@ucsd.edu>",
-  "version": "v1.0.0",
+  "version": "v1.1.0",
   "description": "Pure React Component for tree data visualization",
   "license": "MIT",
   "keywords": [
@@ -43,6 +43,7 @@
     "d3-transition": "^1.0.3",
     "d3-zoom": "^1.1.1",
     "dagre": "^0.7.4",
+    "react": "^15.6.1",
     "react-smooth": "^0.1.14",
     "shortid": "^2.2.6"
   },
