--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "d3-interpolate": "^1.1.5",
     "d3-scale": "^1.0.4",
     "d3-selection": "^1.0.2",
+    "d3-svg-annotation": "^2.2.0",
     "d3-transition": "^1.0.3",
     "d3-zoom": "^1.1.1",
     "dagre": "^0.7.4",
